force-app/main/default/objects/Dan360_ListasPreciosPorCuenta__c/Dan360_ListasPreciosPorCuenta__c.object-meta.xml
<CustomObject>
    <description>Objeto que relaciona las listas de precios a las cuentas</description>
    <label>Lista de precios por cuenta</label>
    <nameField>
        <label>Nombre de Listas de precios por cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas de precios por cuenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>