force-app/main/default/objects/Dan360_ListasPreciosPorCuenta__c/fields/Dan360_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se refiere al cliente.</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listas de precios por cuenta</relationshipLabel>
    <relationshipName>Listas_de_precios_por_cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>