force-app/main/default/objects/Dan360_ListasPreciosPorCuenta__c/fields/Dan360_ListaPrecios__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ListaPrecios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lista de precios de los productos según el cliente que lo adquiera.</description>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Listas de precios por cuenta</relationshipLabel>
    <relationshipName>Listas_de_precios_por_cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>