force-app/main/default/objects/Dan360_ListasPreciosPorCuenta__c/fields/Dan360_UnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadNegocio__c</fullName>
    <description>Se refiere al negocio donde se generará una transacción, en donde impactará la venta de un producto.</description>
    <label>Unidad de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMN</fullName>
            </value>
            <value>
                <fullName>NuBa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>